plugins {
	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.desafios'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
	compileOnly 'org.projectlombok:lombok:1.18.22'
	runtimeOnly 'com.h2database:h2:1.4.200'
	runtimeOnly 'org.postgresql:postgresql:42.2.24.jre7'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
	// https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
	// https://mvnrepository.com/artifact/javax.validation/validation-api
	implementation group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.5.4'
	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.5.2'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.5.4'
	// https://mvnrepository.com/artifact/org.javassist/javassist
	implementation group: 'org.javassist', name: 'javassist', version: '3.27.0-GA'
}

test {
	useJUnitPlatform()
}
